2004-09-21  MenTaLguY <mental@rydia.net>

	* src/gc-finalized.h: fix for stupid bug preventing these objects
	  from being collected

2004-09-21  Peter Moulder  <pmoulder@river>

	* src/sp-marker.h, src/sp-marker.cpp (sp_marker_show_instance):
	  Change to using NR::Matrix instead of NRMatrix.  Update caller.

	* src/sp-gradient.cpp (sp_gradient_get_g2d_matrix,
	  sp_gradient_get_gs2d_matrix, sp_gradient_set_gs2d_matrix):
	  New NR::Matrix/NR::Rect versions of existing functions.

	* src/libnr/nr-matrix-translate-ops.h (operator/): New function.

	* src/libnr/nr-matrix-scale-ops.cpp: New file.
	* src/libnr/nr-matrix-scale-ops.h (operator/(Matrix,scale)):
	  New function.

2004-09-20  Peter Moulder  <pmoulder@bowman.csse.monash.edu.au>

	* src/Makefile.am (EXTRA_DIST), Makefile_insert
	  dialogs/Makefile_insert extension/implementation/Makefile_insert
	  extension/internal/Makefile_insert helper/Makefile_insert
	  livarot/Makefile_insert (blah_SOURCES):
	  Add some .h files for `make dist'.

2004-09-19  MenTaLguY <mental@rydia.net>

	* src/gc-core.h: don't defer finalizers

	* src/gc-core.h: bump up free space divisor -- collections should
	  happen ~32x more frequently

2004-09-18  MenTaLguY <mental@rydia.net>

	* src/dialogs/filedialog.cpp: unref the preview document we created

2004-09-18  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/AVL.cpp, src/livarot/AVL.h,
	src/livarot/DblLinked.cpp, src/livarot/DblLinked.h,
	src/livarot/LivarotDefs.h, src/livarot/ShapeRaster.cpp,
	src/livarot/ShapeSweep.cpp, src/livarot/sweep-tree.cpp: replace
	leftFoo and rightFoo with foo[2] in a few places.

2004-09-17  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/Shape.h: use a std::vector for Shape::chgts.  Add
	clearIncidenceData();

	* src/livarot/Shape.cpp: Add clearIncidenceData().  Initialise
	iData in the constructor.

	* src/livarot/ShapeSweep.cpp: coding style cleanups.  Use a
	std::vector for Shape::chgts.  Use clearIncidenceData().
