@@ -59,6 +59,7 @@ libinkpre_a_SOURCES =	\
 	extract-uri.cpp extract-uri.h	\
 	file.cpp file.h	\
 	forward.h	\
+	gc.cpp \
 	gc-alloc.h \
 	gc-anchored.h \
 	gc-core.h \
@@ -72,6 +73,7 @@ libinkpre_a_SOURCES =	\
 	isnan.h \
 	knot.cpp knot.h	\
 	knotholder.cpp knotholder.h	\
+	layer-fns.cpp layer-fns.h	\
 	macros.h	\
 	marker-status.cpp marker-status.h	\
 	message.h \
